# HiddenMines

./: CMakeLists.txt  Operativni sistemi - seminarski rad.docx  common.h  list.c  list.h  parser.c  player.h  util.h
client/: chat-loop.c  client.c  client.h  communication-loop.c  game-loop.c  ui.h
client/nuklear/: game.c  nuklearapp.c
cmake/: FindGDI.cmake  FindGLEW.cmake  FindGLUT.cmake  FindSDL2.cmake
server/: lobby-loop.c  player-loop.c  server.c  server.h
